# UAEStartupWizard

./: .deployment-ready  .env.example  .env.production  .env.test  .npmrc  .replit  DEPLOYMENT.md  DEPLOYMENT_INSTRUCTIONS.md  Procfile  RAILWAY_DEPLOYMENT.md  RAILWAY_DEPLOYMENT_CHECKLIST.md  RAILWAY_DEPLOYMENT_STEPS.md  RAILWAY_ES_MODULE_DEPLOYMENT.md  RAILWAY_HEALTHCHECK_TROUBLESHOOTING.md  README.md  REPLIT_DEPLOYMENT.md  UPDATED_RAILWAY_DEPLOYMENT.md  add_category_documents.js  add_dmcc_detailed_docs.js  add_saif_zone_detailed_docs.js  add_test_documents.js  build-deployment.js  build-deployment.sh  build-no-playwright-v2.js  build-no-playwright.js  build-simplified.sh  check-freezone-scrapers.ts  check-server-logs.js  complete-freezone-enrichment.js  cookie.txt  create-test-admin.js  create-user.js  create_sample_saif_zone_docs.js  debug-dmcc.js  deploy-guide.md  deploy-http-only.sh  deploy-minimal.sh  deploy-no-playwright.sh  deploy-to-railway-enhanced.sh  deploy-to-railway-local.sh  (+88 more)
attached_assets/: ISIC_Activity-Lists_2024.csv  Pasted--1-Product-Architecture-Understanding-What-apps-repos-exist-right-now-What-modules-file-1746267498424.txt  Pasted--1-Product-Architecture-Understanding-What-apps-repos-exist-right-now-What-modules-files-dire-1746267537742.txt  Pasted--Architecture-Observability-Logs-Settings-web-Deployment-crashed-8-seconds-ago-web-Deployment--1747095058062.txt  Pasted--Variables-for-web-JWT-SECRET--1747080321390.txt  Pasted--workspace-deploy-to-railway-sh--1747020893827.txt  (+8 more)
build-no-playwright-v2/: .npmrc  README.md  package.json
server/: auth.ts  (+18 more)
(+421 files in other folders)
