[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "faiss-cpu>=1.10.0",
    "google-search-results>=2.4.2",
    "langchain>=0.3.24",
    "lxml>=5.4.0",
    "playwright>=1.51.0",
    "requests>=2.32.3",
]
